--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
+<h1>Search Movies</h1>
+
+<%= form_tag(movies_path, :method => "get") do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag 'Search' %>
+<% end %>
+<br>
+<% @movies.each do |movie| %>
+  <%= link_to movie.title, movie %>
+<% end %>
