--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,3 +14,4 @@
 
 <%= link_to "Edit", edit_movie_path(@movie) %>
 <%= link_to "Back", movies_path %>
+<%= link_to "Delete", @movie, method: :delete, data: {confirm: 'Are you sure?'} %>
