--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -24,7 +24,7 @@
   <br>
   <br>
   <button type="button" class="btn btn-info">
-    <span class="glyphicon glyphicon-pencil" aria-hidden="true">
+    <span class="glyphicon glyphicon-facetime-video" aria-hidden="true">
     <%= link_to "Add", new_movie_path %>
     </span>
   </button>
